// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`day 01-2 > part 2 example 1`] = `
Map {
  1 => 1,
  2 => 1,
  3 => 3,
  4 => 1,
}
`;

exports[`day 01-2 > part 2 example 2`] = `
Map {
  3 => 3,
  4 => 1,
  5 => 1,
  9 => 1,
}
`;

exports[`day 01-2 > tally 1`] = `
[
  2,
  2,
  2,
  3,
  3,
  4,
  4,
  4,
  5,
]
`;

exports[`day 01-2 > tally 2`] = `
Map {
  2 => 3,
  3 => 2,
  4 => 3,
  5 => 1,
}
`;
